# teleton

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  download_and_patch.py  openapi.yml  upload_file.js
.github/workflows/: build.yml
proto/: proto.proto
src/: main.rs  proto.rs  shared.rs  teleauth.rs
src/handlers/: chunk.rs  mod.rs
src/handlers/chunk/: mod.rs
src/handlers/files/: chunk.rs  meta.rs  mod.rs
src/handlers/upload/: chunk.rs  finalize.rs  limit.rs  mod.rs  start.rs
