[package]
name = "teleton"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", default-features = false, features = ["http1", "query", "tracing", "tower-log", "tokio", "json"] }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
grammers-client = { version = "0.7.0", default-features = false, features = ["proxy"] }
qrcode = { version = "0.14.1", default-features = false }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "tracing"] }
serde_json = { version = "1.0.128", features = ["std"] }
serde = { version = "1.0.210", features = ["std", "derive"] }
rand = "0.8.5"
prost = "0.13.3"
prost-build = "0.13.3"

[patch.crates-io]
grammers-mtproto = { path = "vendor/grammers-mtproto-0.7.0" } 
sha2 = { path = "vendor/sha2-0.10.8" } 

[build-dependencies]
prost-build = "0.13.3"
